# cubos-jam

./: CMakeLists.txt
assets/: input.bind  main.pal
assets/scenes/: cube.cubos  main.cubos
assets/voxels/: cube.grd
cubos_surfers/: CMakeLists.txt  emscripten.html
src/: audioAudioPlugin.cpp  audioAudioPlugin.hpp  camera.cpp  camera.hpp  cube.cpp  cube.hpp  gameLogic.cpp  gameLogic.hpp  main.cpp  utils.cpp  utils.hpp
